Closed
Bug 314226
Opened 20 years ago
Closed 20 years ago
Camino „Unrequested Popup Detected“ window title is not localizable
Categories
(Camino Graveyard :: Translations, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Camino1.0
People
(Reporter: ijojo, Assigned: Usul)
References
()
Details
(Keywords: fixed1.8, intl)
Attachments
(1 file)
|
1.08 KB,
patch
|
sfraser_bugs
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) Gecko/20050531 Camino/0.9+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) Gecko/20050531 Camino/0.9+
When visiting a site with pop-up windows in fresh install (not configured) Camino, „Unrequested Popup Detected“ window shows up. COntent of main message is localizable but not a title of window itself.
Reproducible: Always
Updated•20 years ago
|
Assignee: mikepinkerton → qa-mozilla
Component: General → Translations
Flags: camino1.0?
Keywords: intl
QA Contact: qa-mozilla
The only place I see this string in LXR is a Camino file http://lxr.mozilla.org/mozilla/source/camino/src/browser/BrowserWrapper.mm#833 so I think this is just missing from localizable.strings.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Never mind. I read the code wrong :-( The title is hard-coded while the text is a localizable string, just as comment 0 states.
So this will require a code change first and then an updated localizable.strings file.
Updated•20 years ago
|
Flags: camino1.0? → camino1.0+
Target Milestone: --- → Camino1.0
| Assignee | ||
Comment 3•20 years ago
|
||
Asking review and commit to smfr
Attachment #201378 -
Flags: review?(sfraser_bugs)
Updated•20 years ago
|
Attachment #201378 -
Flags: review?(sfraser_bugs) → review+
Comment 4•20 years ago
|
||
Comment on attachment 201378 [details] [diff] [review]
Patch v0
Checked in on trunk and branch: I changed the key to PopupBlockTitle and added the appropriate entry in Localizable.strings.
| Assignee | ||
Comment 5•20 years ago
|
||
Thanks Mark.
Updated•20 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•