Bug 314226, "Unrequested Popup Detected" title should be localizable.  The new key name is PopupBlockTitle.  Patch by Ludovic Hirlimann <qa-mozilla@hirlimann.net>.  Camino-only.  r=smfr